class CapteurCouleur:
    def __init__(self, adresse_i2c: str, bus_i2c: object):
        self.adresse_i2c = adresse_i2c
        self.bus_i2c = bus_i2c

    def lire_valeurs_brutes() -> tuple:
        pass

    def normaliser_rgb() -> tuple:
        pass

    def detecter_couleur_dominante() -> str:
        pass